# mlxserve

./: README.md  pyproject.toml
mlx_server.egg-info/: SOURCES.txt  requires.txt
mlxserver/: cli.py  main.py  rag_manager.py
mlxserver.egg-info/: PKG-INFO  SOURCES.txt
